--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,16 @@
     <string name="home">Home</string>
     <string name="map">Map</string>
     <string name="favorites">Favorites</string>
+    <string name="searching">Buscando</string>
+    <string name="loadingAccommodation">Cargando Alojamiento</string>
+    <string name="addTofavorite">Se ha agregado este alojamiento a favoritos.</string>
+    <string name="removeTofavorite">Se ha quitado este alojamiento de favoritos.</string>
+    <string name="title_activity_accommodation">Detail</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="beds">Beds</string>
+    <string name="bathroom">Bath</string>
+    <string name="guest">Guest</string>
+    <string name="bedrooms">Berdooms</string>
 
 </resources>
